--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Mi página</title>
   </head>
   <body>
-    <h1>Hola mundo</h1>
+    <h1>CV</h1>
     <p>Esta es mi primera página web</p>
+    <p>asdasd</p>
   </body>
 </html>
