--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
   </head>
   <body>
     <h1>CV</h1>
-    <p>Esta es mi primera página web</p>
-    <p>asdasd</p>
+    <p>Nombre copmpleto: Jesús Gabriel Vásquez Muñoz.<br>
+    RUT: 31.415.926. <br> 
+    Formación académica: 4 medio. <br> 
+    Experiencia laboral: Ayudante universitario 2024. </p>
+    
+    
   </body>
 </html>
