--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     Formación académica: 4 medio. <br> 
     Experiencia laboral: Ayudante universitario 2024. </p>
     
-    <img src="https://github.com/JesusVz95/JesusVz95/blob/main/imagen3.png" >
+    <img src="imagen3.png" , imagen3>
   </body>
 </html>
